--- a/bab/2-tinjauan-pustaka.tex
+++ b/bab/2-tinjauan-pustaka.tex
@@ -128,7 +128,7 @@ klaster Kubernetes dapat dilihat pada gambar \ref{fig:arsitektur-cluster-kuberne
   \includegraphics[scale=0.15]{gambar/kubernetes-cluster-architecture.png}
 
   % Ubah dengan keterangan gambar yang diinginkan
-  \caption{Arsitektur klaster Kubernetes}
+  \caption{Arsitektur Klaster Kubernetes}
   \label{fig:arsitektur-cluster-kubernetes}
 \end{figure}
 
@@ -400,7 +400,7 @@ Secara fungsional, Podman sama seperti Docker, namun Podman memiliki beberapa pe
 
     Pod merupakan konsep dari Kubernetes berupa kumpulan dari satu atau lebih \emph{container}.
     Kumpulan \emph{container} tersebut saling berbagi sumber daya seperti \emph{network namespaces}
-    atau \emph{storage}.
+    dan \emph{storage}.
 
 \end{enumerate}
 
@@ -487,24 +487,12 @@ yang berjalan di atas mesin fisik. Digagaskan pertama kali oleh IBM
 dengan sebuah konsep bernama \emph{time-sharing}. \emph{Time-sharing}
 memungkinkan sebuah mesin digunakan oleh lebih dari satu pengguna sehingga
 pengguna tersebut terlihat memiliki sebuah mesin tersendiri \parencite{ibm-website}.
-Arsitektur dari \emph{virtual machine} dapat dilihat pada gambar \ref{fig:arsitektur-virtual-machine}
-
-\begin{figure}[H]
-  \centering
-
-  % Ubah dengan nama file gambar dan ukuran yang akan digunakan
-  \includegraphics[scale=0.6]{gambar/virtual-machine-architecture.png}
-
-  % Ubah dengan keterangan gambar yang diinginkan
-  \caption{Arsitektur \emph{virtual machine}}
-  \label{fig:arsitektur-virtual-machine}
-\end{figure}
 
 \emph{Virtual machine} dikelola oleh hypervisor. Hypervisor bertugas untuk
 mengelola \emph{virtual machine} dengan cara mengabstraksi sumber daya perangkat keras
 seperti CPU, \emph{memory}, dan penyimpanan dari \emph{host} yang nantinya akan digunakan
 oleh \emph{virtual machine}. Hypervisor sendiri terdiri dari beberapa jenis yaitu hypervisor tipe 1
-dan hypervisor tipe 2. Perbedaan dari kedua jenis tersebut adalah teknik virtualisasi yang digunakan.
+dan hypervisor tipe 2. Perbedaan dari kedua jenis tersebut adalah infrastruktur virtualisasi yang digunakan.
 Hypervisor tipe 1 berjalan langsung di atas \emph{hardware} atau biasa disebut \emph{native hypervisor},
 sedangkan hypervisor tipe 2 berjalan di atas sistem operasi \parencite{Aalam_2021}. Perbedaan
 dari hypervisor tipe 1 dan hypervisor tipe 2 dapat dilihat pada gambar \ref{fig:arsitektur-hypervisor-1-2}.
@@ -516,7 +504,7 @@ dari hypervisor tipe 1 dan hypervisor tipe 2 dapat dilihat pada gambar \ref{fig:
   \includegraphics[scale=0.55]{gambar/Type-1-and-type-2-hypervisors.png}
 
   % Ubah dengan keterangan gambar yang diinginkan
-  \caption{Hypervisor tipe 1 dan tipe 2 \parencite{nfv}}
+  \caption{Hypervisor Tipe 1 dan Tipe 2 \parencite{nfv}}
   \label{fig:arsitektur-hypervisor-1-2}
 \end{figure}
 
@@ -617,16 +605,12 @@ dapat dilihat pada gambar \ref{fig:linux-bridge}
 
 \begin{figure}[H]
   \centering
-
-  % Ubah dengan nama file gambar dan ukuran yang akan digunakan
   \includegraphics[scale=0.3]{gambar/linux-bridge.png}
-
-  % Ubah dengan keterangan gambar yang diinginkan
-  \caption{Visualisasi Linux \emph{bridge}}
+  \caption{Visualisasi Linux \emph{Bridge} \parencite{Singh861571}}
   \label{fig:linux-bridge}
 \end{figure}
 
-\emph{Virtual machine} yang dibuat dapat mengutilisasi Linux
+Pada sistem operasi Linux, \emph{Virtual machine} yang dibuat dapat mengutilisasi Linux
 \emph{bridge} untuk tersambung dengan jaringan lokal yang sama dengan \emph{host}.
 Dengan begitu, alamat IP yang didapat oleh \emph{virtual machine} berada dalam jangkauan
 yang sama dengan alamat IP dari \emph{host}, sehingga \emph{virtual machine} tersebut
@@ -636,11 +620,55 @@ terlihat sebagai satu mesin fisik tersendiri.
 
 RPC atau \emph{Remote Procedure Call} adalah sebuah paradigma komunikasi antar program
 melalui jaringan internet. RPC memungkinkan sebuah program untuk mengeksekusi sebuah
-prosedur atau fungsi yang terdapat pada komputer lain.
+prosedur atau fungsi yang terdapat pada komputer lain seperti mengeksekusi prosedur
+atau fungsi tersebut secara lokal. Konsep mengenai RPC pertama kali dikenalkan oleh
+Bruce Jay Nelson melalui disertasinya yang berjudul "Remote Procedure Call" \parencite{rpc}.
+
+Gambaran komunikasi melalui RPC dapat dilihat pada gambar \ref{fig:rpc-communication}.
+Pada gambar tersebut, mesin C memanggil prosedur yang terdapat pada mesin S melalui
+hubungan internet. Setelah itu, mesin S mengembalikan hasil dari prosedur tersebut
+ke mesin C. Hasil prosedur dari mesin S tersebut dapat digunakan oleh
+mesin C untuk menjalankan tugasnya tanpa perlu menjalankan prosedur tersebut
+secara lokal di mesin C.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.3]{gambar/rpc-communication.png}
+  \caption{Komunikasi RPC \parencite{rpc}}
+  \label{fig:rpc-communication}
+\end{figure}
+
+Gambaran lainnya dari proses RPC terdapat pada gambar \ref{fig:rpc-communication-2}.
+Pada gambar tersebut, mesin yang memanggil prosedur atau fungsi melalui RPC memiliki sebuah
+\emph{stub} atau \emph{template} dari prosedur atau fungsi yang ingin dipanggil. Mesin
+tempat prosedur dipanggil juga memiliki \emph{stub} dari fungsi atau prosedur tersebut namun
+mesin tersebut menyediakan \emph{logic} dalam menjalankan fungsi atau prosedur. \emph{Stub}
+pada mesin yang memanggil merupakan \emph{identifier} dari fungsi atau prosedur apa yang ingin
+dipanggil di mesin tempat fungsi atau prosedur dijalankan.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.35]{gambar/rpc-communication-2.png}
+  \caption{Komunikasi RPC \parencite{implementing-rpc}}
+  \label{fig:rpc-communication-2}
+\end{figure}
 
 \subsubsection{gRPC}
 
-gRPC adalah implementasi dari RPC yang diciptakan oleh Google \parencite{grpc-website-docs-overview}.
+gRPC adalah implementasi dari RPC yang diciptakan oleh Google. Sama seperti sistem
+yang mengimplementasikan sistem RPC, gRPC menggunakan konsep mendefinisikan sebuah \emph{service},
+menentukan metode yang bisa dipanggil dari jarak jauh beserta parameter dan tipe data yang
+dikembalikan oleh metode tersebut. Secara \emph{default}, gRPC menggunakan protocol buffers
+sebagai \emph{Interface Definition Language} (IDL) untuk mendefinisikan antarmuka \emph{service}
+dan struktur dari \emph{payload} yang diperlukan oleh \emph{service}. Gambaran garis besar
+komunikasi gRPC terdapat pada gambar \ref{fig:grpc-top-level}.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.5]{gambar/grpc-usage-image.png}
+  \caption{Komunikasi gRPC \parencite{grpc-website-docs-overview}}
+  \label{fig:grpc-top-level}
+\end{figure}
 
 \subsection{Cloud-init}
 
