--- a/bab/4-pengujian-analisis.tex
+++ b/bab/4-pengujian-analisis.tex
@@ -3,17 +3,17 @@
 
 % Ubah bagian-bagian berikut dengan isi dari pengujian dan analisis
 
-Pada penelitian ini dipaparkan \lipsum[1][1-5]
+Pada penelitian ini dipaparkan
 
 \section{Skenario Pengujian}
 \label{sec:skenariopengujian}
 
-Pengujian dilakukan dengan \lipsum[1-2]
+Pengujian dilakukan dengan
 
 \section{Evaluasi Pengujian}
 \label{sec:analisispengujian}
 
-Dari pengujian yang \lipsum[1]
+Dari pengujian yang
 
 % Contoh pembuatan tabel
 \begin{longtable}{|c|c|c|}
@@ -29,5 +29,3 @@ Dari pengujian yang \lipsum[1]
   40 J            & 8000 M                & 1600 M/s           \\
   \hline
 \end{longtable}
-
-\lipsum[2-4]
